# managePy

./: README.md  pyproject.toml  setup.py
managePy/: __init__.py  init.py  retry.py  selfDestruct.py
src/managePy/: limit.py
